--- a/templates/cmdb_validation_users.html
+++ b/templates/cmdb_validation_users.html
@@ -6,7 +6,7 @@
 <table>
     <tr>
       <form class="button" align="right" method="post" action="/data" enctype="multipart/form-data">
-         <input class="mybutton" type="submit" value=" CMDB DATA VALIDATION "  class="span2"></td>
+         <input class="btngroup" type="submit" value="CMDB DATA VALIDATION"  class="span2"></td>
           Select this option to validate CIs and Sites.
       </form>
      
@@ -18,7 +18,7 @@
 <table>
     <tr>
     <form class="button" method="post" action=/op_res_cats enctype="multipart/form-data">
-      <input class="mybutton" type="submit" value="OP/RES CATEGORIES VALIDATION"  class="span2"></td>    
+      <input class="btngroup" type="submit" value="OP/RES CAT VALIDATION"  class="span2"></td>    
       Select this option to validate the Operational and Resolution Categories.
     </form>
       </form>
@@ -29,12 +29,13 @@
 <table>
   <tr> 
     <form class="button" method="get" action="site_upload" enctype="multipart/form-data">
-        <input class="mybutton" type="SUBMIT" value="    CMDB DATA REPORT     "  class="span2"></td>
+        <input class="btngroup" type="SUBMIT" value="CMDB DATA REPORT"  class="span2"></td>
          Select this option to download a CMDB report (workaround).
     </form>
   </tr>
 </table>
  <h2></h2>
+
 
 
 {% endblock %}
