--- a/templates/home.html
+++ b/templates/home.html
@@ -18,22 +18,13 @@ Hello, <b>{{ current_user.username}}</b>
  <font size="2"><h2> Select the company in the box bellow:</h2></font>
  <h2> 
 
-<form class="form-inline" method="POST" action="{{ url_for('home') }}">
-  <div class="form-group">
-    <div class="input-group">
-        
-            <select name="comp_select" style="color:black;background-color:#e6e6e6" class="button">
-
-              {% for o in data %}
-
-              <option value="{{ o }}" >{{ o }} </option>
-              {% endfor %}
-            </select>
-             <button type="submit" class= "mybutton">SUBMIT</button>
-    </div>
-
-   
-  </div>
+<form method="POST" action="{{ url_for('home') }}">
+    <select name="comp_select" style="color:black;background-color:#e6e6e6" class="button">
+      {% for o in data %}
+        <option value="{{ o }}" >{{ o }} </option>
+      {% endfor %}
+    </select>
+    <button type="submit" class= "mybutton">SUBMIT</button>
 </form>
 </h2>
 <p>&nbsp;</p>
@@ -56,8 +47,20 @@ function openWin() {
       <li><p> Do not remove any field form the template nor delete or change any sheetnames present in the original template;</li>
       <li><p> Follow the instructions provided in each template and fill the required fields;</li>
     </ul>
-  </div>
- 
+  
+
+<!--
+<table>
+    <tr>
+      <form class="button" align="right" method="get" action="/prod_cat" enctype="multipart/form-data">
+         <input class="btngroup" type="submit" value="Product Catalogue update"  class="span2"></td>
+          Select this option to Update the Product Catalogue.
+      </form>   
+ </tr>
+    </table>
+-->
+</div>
+
       <!--<a href = "/return-file/" target ="blank"><button class="mybutton2">DOWNLOAD TEMPLATES</button></a>
   <hr/>
     <ul>  
