--- a/templates/index_NOAM_company.html
+++ b/templates/index_NOAM_company.html
@@ -1,9 +1,17 @@
 {% extends "login_layout.html" %}
 {% block content %}
 <!-- Login Form -->
- <p>&nbsp;</p>
+<form>
+  <input type="button" class="mybutton" method="GET" value=" &laquo; BACK" onclick="history.go(-1);">
+</form>
+<p>&nbsp;</p>
+
+
+{% if msg_company %}
+    <h2>Convert CMDB Templates in NOAM Templates for:</h2>
+    <h2 style="color:#004fab;" class="text-muted"><b>{{ msg_company }}</b></h2>
+{% endif %}
  
-<h2>CONVERT CMDB TEMPLATES IN NOAM TEMPLATES:</h2>
 <table>
   <tr>
     <form class="button" align="right" method="post" action="noam_data" enctype="multipart/form-data">
@@ -28,7 +36,9 @@
     </form>
   </tr>
 </table> 
-
+{% if msg_miss_file %}
+    <font size="2"><p><strong></strong> {{ msg_miss_file }}</font>
+  {% endif %}  
 <p>&nbsp;</p>
 
 <hr/>
