--- a/templates/noam_files_upload.html
+++ b/templates/noam_files_upload.html
@@ -1,8 +1,16 @@
 {% extends "login_layout.html" %}
 {% block content %}
+<form>
+  <input type="button" class="mybutton" method="GET" value=" &laquo; BACK" onclick="history.go(-1);">
+</form>
+<p class="big"></p>
+<p class="big"></p>
 
 <div class="multi_upload_index">
-	<h2 style="color:black;background-color:#cccccc" class="text-muted"><b>REPORT:</b></h2>
+	{% if msg_company %}
+		<h2 style="color:black;background-color:#cccccc" class="text-muted"><b><font size="5">{{ msg_company }} REPORT:</font></b></h2>
+	{% endif %}
+	
 
 		<h2 style="color:black;" class="text-muted">Below the file with data to upload in NOAM template format:</h2>
 		<ul>
