--- a/templates/res_cats_upload.html
+++ b/templates/res_cats_upload.html
@@ -1,16 +1,23 @@
 {% extends "login_layout.html" %}
 {% block content %}
 <!-- Login Form -->
-
+<form>
+  <input type="button" class="mybutton" method="GET" value=" &laquo; BACK" onclick="history.go(-1);">
+</form>
+<p class="big"></p>
+<p class="big"></p>
+	
 	<div class="multi_upload_index">
-		<h2 style="color:black;" class="text-muted"><b>REPORT:</b></h2>
+		{% if msg_company %}
+			<h2 style="color:black;background-color:#cccccc" class="text-muted"><b><font size="5">{{ msg_company }} REPORT:</font></b></h2>
+		{% endif %}
 
-			<h2 style="color:black;background-color:#cccccc" class="text-muted">Below the files and the report (xlsx in case of issues, xlsm if no issues):</h2>
-			<ul>
-				{% for file in op_res_filenames %}
-					<li><a href="{{url_for('uploaded_RES_CATS_file', filename=file)}}">{{file}}</a></li>
-				{% endfor %}
-			</ul>
+		<h2 style="color:black;background-color:#cccccc" class="text-muted">Below the files and the report (xlsx in case of issues, xlsm if no issues):</h2>
+		<ul>
+			{% for file in op_res_filenames %}
+				<li><a href="{{url_for('uploaded_RES_CATS_file', filename=file)}}">{{file}}</a></li>
+			{% endfor %}
+		</ul>
 		<hr/>
 		{% if msg_res %}
 			<u><h2 style="color:black;background-color:#cccccc" class="text-muted">{{ msg_res }}</h2></u>
