--- a/templates/cmdb_validation_admin.html
+++ b/templates/cmdb_validation_admin.html
@@ -21,16 +21,7 @@
 <h2></h2>
 
 
-<table>
-    <tr>
-    <form class="button" method="post" action='/op_res_cats' enctype="multipart/form-data">
-      <input class="btngroup" type="submit" value="OP/RES CAT VALIDATION"  class="span2"></td>    
-      Select this option to validate and convert the Operational and Resolution Categories in NOAM templates.
-    </form>
-      </form>
- </tr>
-    </table>
-    <h2></h2>
+
 
 <table>
   <tr> 
@@ -45,39 +36,62 @@
     
 <table>
     <tr>
-    <form class="button" method="post" action=/noam_data enctype="multipart/form-data">
+    <form class="button" method="post" action="noam_data" enctype="multipart/form-data">
       <input class="btngroup" type="submit" value="CMDB DATA CONVERSION"  class="span2"></td>    
       Select this option to convert CIs and Sites in NOAM templates.
     </form>
       </form>
  </tr>
     </table>
-    <h2></h2>
 
 
+<h2></h2>
+
+
+ <table>
+  <tr> 
+    <form class="button" method="get" action="update_prod_cat" enctype="multipart/form-data">
+        <input class="btngroup" type="SUBMIT" value="PRODUCT CATALOGUE"  class="span2"></td>
+         Select this option to update the Product Catalogue.
+    </form>
+  </tr>
+</table>
+ <h2></h2>
 
 
 <table>
     <tr>
+    <form class="button" method="post" action='/op_res_cats' enctype="multipart/form-data">
+      <input class="btngroup" type="submit" value="OP/RES CAT VALIDATION"  class="span2"></td>    
+      Select this option to validate and convert the Operational and Resolution Categories in NOAM templates.
+    </form>
+      </form>
+ </tr>
+    </table>
+
+<h2></h2>
+
+<table>
+    <tr>
     <form class="button" align="right" method="get" action="rap" enctype="multipart/form-data">
-      <input class="btngroup" type="submit" value="RA (RAP TOOL) TEMPLATE"  class="span2"></td>
-      Select this option to validate RA template for RAP Tool (To implement).
+      <input class="btngroup" type="submit" value="RA (RAP TOOL) VALIDATION"  class="span2"></td>
+      Select this option to validate RA template for RAP Tool (Being implemented).
     </form>
   </tr>
     </table>   
 
  <h2></h2>
 
-<!--<table>
+<table>
     <tr>
-    <form class="button" align="right" method="post" action=/site_data enctype="multipart/form-data">
-      <input class="mybutton" type="submit" value="    CMDB DATA REPORT     "  class="span2"></td> 
-      Select this option to download a CMDB report (workaround).
+    <form class="button" method="post" action=/noam_rap enctype="multipart/form-data">
+      <input class="btngroup" type="submit" value="RA DATA CONVERSION"  class="span2"></td>    
+      Select this option to convert RA in NOAM templates.
     </form>
+      </form>
  </tr>
     </table>
--->
-
+<h2></h2>
 
 
 <table>
@@ -88,7 +102,8 @@
     </form>
   </tr>
 </table>
- <h2></h2>
+ 
+
 
 
 
