--- a/templates/cmdb_validation_admin.html
+++ b/templates/cmdb_validation_admin.html
@@ -33,6 +33,18 @@
 </table>
  <h2></h2>
 
+<table>
+  <tr> 
+    <form class="button" method="get" action="update_cmdb" enctype="multipart/form-data">
+        <input class="btngroup" type="SUBMIT" value="CMDB UPDATE"  class="span2"></td>
+         Select this option to update the CMDB.
+    </form>
+  </tr>
+</table>
+ <h2></h2>
+
+
+
     
 <table>
     <tr>
