--- a/templates/cmdb_validation_users.html
+++ b/templates/cmdb_validation_users.html
@@ -16,6 +16,16 @@
 <h2></h2>
 
 <table>
+  <tr> 
+    <form class="button" method="get" action="site_upload" enctype="multipart/form-data">
+        <input class="btngroup" type="SUBMIT" value="CMDB DATA REPORT"  class="span2"></td>
+         Select this option to download a CMDB report (workaround).
+    </form>
+  </tr>
+</table>
+ <h2></h2>
+ 
+<table>
     <tr>
     <form class="button" method="post" action=/op_res_cats enctype="multipart/form-data">
       <input class="btngroup" type="submit" value="OP/RES CAT VALIDATION"  class="span2"></td>    
@@ -26,16 +36,9 @@
     </table>
     <h2></h2>
 
-<table>
-  <tr> 
-    <form class="button" method="get" action="site_upload" enctype="multipart/form-data">
-        <input class="btngroup" type="SUBMIT" value="CMDB DATA REPORT"  class="span2"></td>
-         Select this option to download a CMDB report (workaround).
-    </form>
-  </tr>
-</table>
- <h2></h2>
 
 
+<a href = "/return-file/" target ="blank"><button class="btngroup">PRODUCT CATALOGUE</button></a>
+Select this option to download the prodcut catalogue.
 
 {% endblock %}
