--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,7 @@ function openWin() {
     </ul>
  <p>&nbsp;</p>
  
-<table>
+<!--<table>
   <tr> 
     <form class="button" method="get" action="user_guide" enctype="multipart/form-data">
         <input class="mybutton2" type="SUBMIT" value="USER_GUIDE"  class="span2"></td>
@@ -74,6 +74,7 @@ function openWin() {
     </form>
   </tr>
 </table>
+-->
 <!--
 <table>
     <tr>
